@@ -10,11 +10,6 @@ env:
 - PLONE_VERSION=4.3
 - PLONE_VERSION=5.0
 matrix:
-  include:
-  - python: 2.6
-    env: PLONE_VERSION=4.0
-  - python: 2.6
-    env: PLONE_VERSION=4.1
   allow_failures:
   - env: PLONE_VERSION=5.0
   fast_finish: true
