@@ -1,6 +1,4 @@
 # -*- coding: utf-8 -*-
-
-# import unittest2 as unittest
 import unittest
 
 from plone.app.testing import TEST_USER_ID
