@@ -4,6 +4,9 @@ Changelog
 2.0a1 (unreleased)
 -------------------
 
+- Drop support for Plone 4.0, Plone 4.1 and Python 2.6.
+  [hvelarde]
+
 - Updated Spanish translation. [macagua]
 
 - Updated i18n support. [macagua]
